correction des z-index en version mobile

--- a/sass/page/_portfolio.scss
+++ b/sass/page/_portfolio.scss
@@ -307,6 +307,7 @@
         content: "";
         background-image: url('../picture/portfolio/BookiPhone.png');
         background-size: cover;
+        z-index: -1;
     }
 
     //Omyfood
