--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -899,6 +899,7 @@ ul {
     content: "";
     background-image: url("../picture/portfolio/BookiPhone.png");
     background-size: cover;
+    z-index: -1;
   }
   .imgPortfolio--omyFood::after {
     content: "";
